# mcs-examples

./: CMakeLists.txt  README.md  easy-settings.cmake  settings.cmake
apps/mcs-camkes/: CMakeLists.txt
apps/mcs-camkes/components/Init/: Init.camkes
apps/mcs-camkes/components/Task/: Task.camkes
apps/mcs-camkes/components/Task/src/: task.c
apps/mcs-native/: CMakeLists.txt  main.c
